# cashcrab-pos

./: Cargo.toml  README.md  index.html
.github/workflows/: lint.yml
src/: app.rs  main.rs  utls.rs
src/components/: invoice.rs  invoice_paid.rs  mod.rs  pos.rs  set_mint.rs  set_rec_key.rs  set_relays.rs  settings.rs
