[package]
name = "cashcrab-pos"
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = ["thesimplekid"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
gloo-net = "0.3.0"
serde = "1"
serde_json = "1"
wasm-bindgen-futures = "0.4.37"
yew = { version="0.20", features=["csr"] }
cashu-crab = { git = "https://github.com/thesimplekid/cashu-crab", default-features = false, features = ["wallet"] }
# cashu-crab = { path = "../cashu-crab", default-features = false, features = ["wallet"] }
log = "0.4.19"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.64", features = ["HtmlSelectElement"] }
gloo = { version = "0.8.1", features = ["timers", "futures"] }
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"
nostr-sdk = { version = "0.22", default-features = false, features = ["nip04","nip19"] }
anyhow = "1.0.71"
url = "2.4.0"
qrcode = { version = "0.12.0", default-features = false, features = ["svg"] }
tokio = { version = "1", default-features = false, features = ["sync"] } 
